--- a/package.json
+++ b/package.json
@@ -3,8 +3,17 @@
   "version": "1.0.0",
   "description": "Personal AI Infrastructure for OpenCode (based on PAI v2.4)",
   "type": "module",
+  "scripts": {
+    "prepare": "husky",
+    "precommit": "bun Tools/Precommit.ts"
+  },
   "dependencies": {
     "diff": "^8.0.3",
     "yaml": "^2.8.2"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.3.13",
+    "@types/bun": "^1.3.7",
+    "husky": "^9.1.7"
   }
 }
