fix(system): checkpoint integrity fixes
Stabilize PAI runtime path resolution, improve voice notifications, and align workflows/docs with canonical paths.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 node_modules/
 
 # Runtime session data (never commit)
-.opencode/MEMORY/
+.opencode/MEMORY/**
+!.opencode/MEMORY/README.md
+!.opencode/MEMORY/**/
+!.opencode/MEMORY/**/.gitkeep
 
 # Plugin debug logs
 .opencode/plugins/*.log
