fix(runtime): enforce response contract silently
Add loop-proof, silent enforcement (pre-turn contract + post-turn gate), keep subagents minimal but stored in parent work context, and gate debug logging behind PAI_DEBUG with rotation.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ node_modules/
 # Plugin debug logs
 .opencode/plugins/*.log
 
+# Local session transcripts (never commit)
+session-ses_*.md
+
 # Underscore-prefixed agent drafts/variants
 .opencode/agents/_*.md
 
