--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.13",
     "@types/bun": "^1.3.7",
+    "@types/node": "^22.13.5",
     "husky": "^9.1.7"
   }
 }
