--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "precommit": "bun Tools/Precommit.ts"
   },
   "dependencies": {
+    "cmd-ts": "^0.15.0",
     "diff": "^8.0.3",
+    "pai-opencode": "./.opencode",
     "prompts": "^2.4.2",
     "yaml": "^2.8.2"
   },
